...
  self.activityIndicatorView.autoresizingMask = (UIViewAutoresizingFlexibleWidth |
                                                 UIViewAutoresizingFlexibleHeight);
  [self.activityIndicatorView startAnimating];
  [self.view addSubview:self.activityIndicatorView];
  
  if ( self == [self.navigationController.viewControllers objectAtIndex:0] ) {
    self.navigationItem.rightBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Close", nil)
                                                                              style:UIBarButtonItemStylePlain
                                                                             target:self
                                                                             action:@selector(dismissEULA)];
  }
}

...

  UIAlertController *alertController = [UIAlertController
                                        alertControllerWithTitle:NSLocalizedString(@"Connection Failed", nil)
                                        message:NSLocalizedString(@"Unable to load the web page at this time.", nil)
                                        preferredStyle:UIAlertControllerStyleAlert];

  UIAlertAction *cancelAction = [UIAlertAction actionWithTitle:NSLocalizedString(@"Cancel", nil)
                                                         style:UIAlertActionStyleDestructive
                                                       handler:^(UIAlertAction *cancelAction) {
                                                         if (cancelAction) {
                                                           [self.navigationController popViewControllerAnimated:YES];
                                                         }
                                                       }];
...
